Closes #14 - Add js/smooth-scroll.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Vydelka</title>
 </head>
 <body>
+    
+    <script async src="js/smooth-scroll.js"></script>
     <script async src="js/alert-window.js"></script>
 </body>
 </html>
