Added link to index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <script async src="js/alert-window.js"></script>
+    <script async src="js/cart.js"></script>
 </body>
 </html>
