Closes #16 - Add main section to index.html (#20)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Vydelka</title>
 </head>
 <body>
-  
-    
     
 
     <header class="container" id="home">
@@ -44,5 +42,8 @@
     <script async src="js/smooth-scroll.js"></script>
     <script async src="js/alert-window.js"></script>
     <script async src="js/cart.js"></script>
+    <div>
+        Main section
+    </div>
 </body>
 </html>
