--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         </nav>
     </header>
 
+    <footer class="container">
+        <h2 id="contacts">Contact us</h2>
+        <p>Somewhere on the planet Earth...</p>
+    </footer>
+
     <script async src="js/smooth-scroll.js"></script>
     <script async src="js/alert-window.js"></script>
     <script async src="js/cart.js"></script>
