Closes #31 - Add js/product-list.js

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     <script async src="js/smooth-scroll.js"></script>
     <script async src="js/alert-window.js"></script>
     <script async src="js/cart.js"></script>
+    <script async src="js/product-list.js"></script>
 </body>
 </html>
